--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </div>
     </div>
     <div class="footer">
-        <p><a href="https://randomnerdtutorials.com/">Created by RandomNerdTutorials.com</a></p>
-        <p><a href="https://RandomNerdTutorials.com/esp32-web-bluetooth/">Read the full project here.</a></p>
+        <p>Realizado por JS, MR, y MT</p>
     </div>
 </body>
 <script>
