--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <button id="connectBleButton" class="connectButton"> Conectar al dispositivo</button>
                     <button id="disconnectBleButton" class="disconnectButton"> Desconectar del dispositivo</button>
                 </p>
-                <p class="gray-label">BLE state: <strong><span id="bleState" style="color:#d13a30;">Dispositivo/span></strong></p>
+                <p class="gray-label">BLE state: <strong><span id="bleState" style="color:#d13a30;">Desconectado</span></strong></p>
             </div>
         </div>
         <div class="card-grid">
