--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <button id="connectBleButton" class="connectButton"> Conectar al dispositivo</button>
                     <button id="disconnectBleButton" class="disconnectButton"> Desconectar del dispositivo</button>
                 </p>
-                <p class="gray-label">BLE state: <strong><span id="bleState" style="color:#d13a30;">Desconectado</span></strong></p>
+                <p class="gray-label">Estado del dispositivo: <strong><span id="bleState" style="color:#d13a30;">Desconectado</span></strong></p>
             </div>
         </div>
         <div class="card-grid">
@@ -29,9 +29,10 @@
             </div>
 
             <div class="card">
-                <h2>Control GPIO 2</h2>
+                <h2>Control del dispositivo</h2>
                 <button id="onButton" class="onButton">ON</button>
                 <button id="offButton" class="offButton">OFF</button>
+                <button id="resetButton" class="resetButton">Resetear</button>
                 <p class="gray-label">Último valor enviado: <span id="valueSent"></span></p>
             </div>
         </div>
