--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
+    <link sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.min.js"></script>
 </head>
 <body>
     <div class="topnav">
@@ -36,7 +38,24 @@
                 <p class="gray-label">Último valor enviado: <span id="valueSent"></span></p>
             </div>
         </div>
+        <div class="card-grid">
+            <div class="card">
+                <p class="card-title">GYROSCOPE</p>
+                <p><span class="reading">X: <span id="gyroX"></span> rad</span></p>
+                <p><span class="reading">Y: <span id="gyroY"></span> rad</span></p>
+                <p><span class="reading">Z: <span id="gyroZ"></span> rad</span></p>
+              </div>
+              <div class="card">
+                <p class="card-title">ACCELEROMETER</p>
+                <p><span class="reading">X: <span id="accX"></span> ms<sup>2</sup></span></p>
+                <p><span class="reading">Y: <span id="accY"></span> ms<sup>2</sup></span></p>
+                <p><span class="reading">Z: <span id="accZ"></span> ms<sup>2</sup></span></p>
+              </div>
+        </div>
     </div>
+    <div class="cube-content">
+        <div id="3Dcube"></div>
+      </div>
     <div class="footer">
         <p>Realizado por JS, MR, y MT</p>
     </div>
