timestamp abajo giroscopio

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <p><span class="reading">X: <span id="gyroX"></span> rad</span></p>
                 <p><span class="reading">Y: <span id="gyroY"></span> rad</span></p>
                 <p><span class="reading">Z: <span id="gyroZ"></span> rad</span></p>
+                <p class="gray-label">Última lectura <span id="timestamp"></span></p>
               </div>
         </div>
     </div>
