--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="card-grid">
             <div class="card">
-                <p class="card-title">GYROSCOPE</p>
+                <p class="card-title">Giroscopio</p>
                 <p><span class="reading">X: <span id="gyroX"></span> rad</span></p>
                 <p><span class="reading">Y: <span id="gyroY"></span> rad</span></p>
                 <p><span class="reading">Z: <span id="gyroZ"></span> rad</span></p>
