--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <h2>Control GPIO 2</h2>
                 <button id="onButton" class="onButton">ON</button>
                 <button id="offButton" class="offButton">OFF</button>
+                <button id="resetButton" class="resetButton">Reset</button>
                 <p class="gray-label">Último valor leido: <span id="valueSent"></span></p>
             </div>
         </div>
@@ -46,6 +47,7 @@
     const disconnectButton = document.getElementById('disconnectBleButton');
     const onButton = document.getElementById('onButton');
     const offButton = document.getElementById('offButton');
+    const resetButton = document.getElementById('resetButton')
     const retrievedValue = document.getElementById('valueContainer');
     const latestValueSent = document.getElementById('valueSent');
     const bleStateContainer = document.getElementById('bleState');
@@ -56,6 +58,7 @@
     var bleService = '19b10000-e8f2-537e-4f6c-d104768a1214';
     var ledCharacteristic = '19b10006-e8f2-537e-4f6c-d104768a1214';
     var sensorCharacteristic= '19b10003-e8f2-537e-4f6c-d104768a1214';
+    var resetCharacteristic= '19b10005-e8f2-537e-4f6c-d104768a1214';
 
     //Global Variables to Handle Bluetooth
     var bleServer;
@@ -75,6 +78,7 @@
     // Write to the ESP32 LED Characteristic
     onButton.addEventListener('click', () => writeOnCharacteristic(1));
     offButton.addEventListener('click', () => writeOnCharacteristic(0));
+    resetButton.addEventListener('click', () => writeOnCharacteristic(1));
 
     // Check if BLE is available in your Browser
     function isWebBluetoothEnabled() {
@@ -148,6 +152,26 @@
     function writeOnCharacteristic(value){
         if (bleServer && bleServer.connected) {
             bleServiceFound.getCharacteristic(ledCharacteristic)
+            .then(characteristic => {
+                console.log("Found the LED characteristic: ", characteristic.uuid);
+                const data = new Uint8Array([value]);
+                return characteristic.writeValue(data);
+            })
+            .then(() => {
+                latestValueSent.innerHTML = value;
+                console.log("Value written to LEDcharacteristic:", value);
+            })
+            .catch(error => {
+                console.error("Error writing to the LED characteristic: ", error);
+            });
+        } else {
+            console.error ("Bluetooth is not connected. Cannot write to characteristic.")
+            window.alert("Bluetooth is not connected. Cannot write to characteristic. \n Connect to BLE first!")
+        }
+    }
+    function writeOnCharacteristic2(value){
+        if (bleServer && bleServer.connected) {
+            bleServiceFound.getCharacteristic(resetCharacteristic)
             .then(characteristic => {
                 console.log("Found the LED characteristic: ", characteristic.uuid);
                 const data = new Uint8Array([value]);
